[package]
name = "yet"
version = "0.0.2"
authors = ["Alexander Koval <kovalidis@gmail.com>"]
edition = "2018"

[lib]
name = "yet"
path = "src/lib.rs"

[[bin]]
name = "yet"
path = "src/bin/main.rs"

[dependencies]
# quire = "0.4.1"
quire = { git = 'https://github.com/anti-social/rust-quire', rev="d5bc58d" }
failure = "0.1.5"
failure_derive = "0.1.5"
argparse = "0.2.2"

pest = "2.1"
pest_derive = "2.1"

[dev-dependencies]
matches = "0.1.8"
