[package]
name = "yet"
version = "0.0.3"
authors = ["Alexander Koval <kovalidis@gmail.com>"]
edition = "2021"

[lib]
name = "yet"
path = "src/lib.rs"

[[bin]]
name = "yet"
path = "src/bin/main.rs"

[dependencies]
argparse = "0.2.2"
chumsky = "0.8.0"
nom = "7.1"
serde = "1"
serde_yaml = "0.9"
snafu = "0.7"
snafu-derive = "0.7"

[dev-dependencies]
anyhow = "1"
